# task1_fastapi

./: .gitignore  .pdm-python  CHANGELOG.md  Dockerfile  pyproject.toml  requirements.txt
src/app/: main.py
src/app/conponents/ecc/: ECC_KEY.py
src/app/controllers/: EccKeyController.py  KeyWarehouseController.py  LoginController.py  MoviesController.py  UserController.py
src/app/database/: config.py  database.py
src/app/models/: KeyWarehouse.py  Movies.py  User.py
src/app/repositories/: KeyWarehouseRepository.py  LoginRepositories.py  MovieRepository.py  UserRepository.py
src/app/schemas/: KeyWarehouseSchema.py  MoviesSchema.py  UserSchema.py
