
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "marlon", email = "jj80868588@gmail.com"},
]
dependencies = [
    "mysql-connector-python",
    "uvicorn",
    "fastapi",
    "python-jose",
    "python-dotenv",
    "python-multipart",
    "pydantic==1.10.9",
    "sqlalchemy",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
